--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -102,6 +102,7 @@
       <option value="">Select Battalion</option>
       <option value="2 PB">2 PB</option>
       <option value="2 PB(GIRLS)">2 PB(GIRLS)</option>
+      <option value="2 PB NAVY">2 PB NAVY</option>
       <option value="8 PB(REGULAR)">8 PB(REGULAR)</option>
       <option value="8 PB(FSFS)">8 PB(FSFS)</option>
       <option value="1 AIR PB">1 AIR PB</option>
@@ -127,6 +128,7 @@
   <div id="classButtons" style="margin-bottom: 15px;">
     <button type="button" class="class-btn" data-class="2 PB">2 PB</button>
     <button type="button" class="class-btn" data-class="2 PB(GIRLS)">2 PB(GIRLS)</button>
+    <button type="button" class="class-btn" data-class="2 PB NAVY">2 PB NAVY</button>
     <button type="button" class="class-btn" data-class="8 PB(REGULAR)">8 PB(REGULAR)</button>
     <button type="button" class="class-btn" data-class="8 PB(FSFS)">8 PB(FSFS)</button>
     <button type="button" class="class-btn" data-class="1 AIR PB">AIR</button>
