--- a/frontend/staff.html
+++ b/frontend/staff.html
@@ -63,6 +63,7 @@
       <div id="staffClassButtons" style="margin-bottom: 10px;">
         <button type="button" class="staff-class-btn" data-class="2 PB">2 PB</button>
         <button type="button" class="staff-class-btn" data-class="2 PB(GIRLS)">2 PB(GIRLS)</button>
+        <button type="button" class="staff-class-btn" data-class="2 PB NAVY">2 PB NAVY</button>
         <button type="button" class="staff-class-btn" data-class="8 PB(REGULAR)">8 PB(REGULAR)</button>
         <button type="button" class="staff-class-btn" data-class="8 PB(FSFS)">8 PB(FSFS)</button>
         <button type="button" class="staff-class-btn" data-class="1 AIR PB">AIR</button>
